# PythonRangeable

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
src/rangeable/: __init__.py  _boundary_index.py  _core.py  _disjoint_set.py  _errors.py  _interval.py  _slot.py  _transition.py
tests/: test_contract.py  test_cross_language.py  test_property.py  test_v2_operations.py
